[package]
name = "pledge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.11"
borsh = "1.4.0"
solana-program-test = "1.18.11"
solana-sdk = "1.18.11"
anchor-lang = "0.30.0"
spl-token = "4.0.0"
